labs/07-dns-auto-registration/yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress-dns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demo.aks02-xy.<sub name>.becomeazure.ninja
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
